# GPUProgrammingNotes

./: .gitignore  benchmark.py  main.py
universal_linear_algebra/: Cargo.toml  pyproject.toml
universal_linear_algebra/src/: gpu.rs  lib.rs  shader.wgsl
